--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "html2text/html2text": "^4.3",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9"
     },
